fix layout bugs for smaller screens

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,7 +17,14 @@ TODO: Make layout more responsive
 
 html,
 body {
-    @apply min-h-screen lg:h-screen;
+    @apply h-screen;
+}
+
+@media screen and (max-height: 48rem) {
+    html,
+    body {
+        @apply min-h-screen h-auto;
+    }
 }
 
 body {
@@ -25,7 +32,7 @@ body {
 }
 
 .app-container {
-    @apply h-full items-center flex flex-col gap-12;
+    @apply h-full items-center flex flex-col grow gap-12;
 }
 
 #app-title {
@@ -37,7 +44,7 @@ body {
 }
 
 .todo-groups {
-    @apply relative items-center row-span-1 lg:row-span-3 self-stretch flex flex-row border-b-2 lg:flex-col lg:border-r-2 lg:border-b-0 border-gray-400;
+    @apply items-center row-span-1 lg:row-span-3 self-stretch flex flex-row border-b-2 lg:flex-col lg:border-r-2 lg:border-b-0 border-gray-400;
 }
 
 .group-open .todo-groups-list {
@@ -45,15 +52,15 @@ body {
 }
 
 .todo-groups-header {
-    @apply w-full text-center flex gap-4 lg:block items-center font-bold p-5 text-xl lg:text-3xl lg:border-b-2 border-gray-400;
+    @apply lg:w-full text-center flex gap-4 lg:block items-center font-bold p-5 text-xl lg:text-3xl lg:border-b-2 border-gray-400;
 }
 
 .todo-main {
-    @apply overflow-y-scroll lg:px-4 lg:col-start-2 lg:row-start-2 self-stretch row-span-2 relative bg-gray-100;
+    @apply flex flex-col overflow-y-scroll lg:px-4 lg:col-start-2 lg:row-start-2 self-stretch row-span-2 relative bg-gray-100;
 }
 
 .empty-msg {
-    @apply absolute bottom-1/2 mx-4 text-xl lg:text-3xl text-black/50 italic text-center;
+    @apply empty:hidden my-auto mx-4 text-xl lg:p-0 lg:text-3xl text-black/50 italic text-center;
 }
 
 .todo-main-header {
@@ -70,7 +77,7 @@ body {
 }
 
 .todo-list {
-    @apply flex flex-col overflow-y-scroll;
+    @apply empty:hidden flex flex-col overflow-y-scroll;
 }
 
 .todo-item {
@@ -212,7 +219,7 @@ button span {
 }
 
 .current-group {
-    @apply grow font-bold text-center lg:hidden;
+    @apply grow font-bold lg:hidden;
 }
 
 .todo-groups-list {
